@@ -33,6 +33,7 @@ depth: 1
  * Ensure form builder correctly checks for duplicate field names when using a custom related name (John-Scott Atlakson, LB (Ben) Johnston)
  * Normalize `StreamField.get_default()` to prevent creation forms from breaking (Matt Westcott)
  * Prevent out-of-order migrations from skipping creation of image/document choose permissions (Matt Westcott)
+ * Use correct connections on multi-database setups in database search backends (Jake Howard)
 
 ### Documentation
 
